2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: New module.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (set_inner_html): Line/column number
	code was old one yet.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Better line/column reporting for "duplicate attribute"
	errors.  Line/column markings for DOCTYPE, comment, and
	character tokens are reintroduced; otherwise,
	error location for "not HTML5" error and errors
	for implied elements are not attached.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Set line/column numbers to attributes.

	* NanoDOM.pm (create_attribute_ns, set_attribute_node_ns): Added.
	(value): Setter implemented.

	* mkhtmlparser.pl: Set line/column numbers to Attr nodes.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Unused line/column markings are removed.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): Remove |first_start_tag|
	flag, which is no longer used.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Set line/column information to element nodes.

	* mkhtmlparser.pl (!!!create-element, !!!insert-element,
	and !!!insert-element-t): Set line/column information to
	element nodes.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): The first "<" character
	in "<?", "<>", or "</>" should be the error point.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some more fixes on error position reporting.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Token-level precious error reporting.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Preparation for more precious error point
	reporting.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Error type revised.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Similar codes are merged together, again.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Similar codes are merged together.
