@@ -1,5 +1,14 @@
 2008-03-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* RDFXML.pm: s/id/ID/ for attribute name.
+	The |node| arguments are added for |ontriple| calls.
+	Too many "attribute not allowed" errors were raised.
+
+	* ContentChecker.pm: Initial experimental support for rdf:RDF
+	element.
+
+2008-03-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* RDFXML.pm: New module.
 
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
